--- a/YXVideoCapture/Info.plist
+++ b/YXVideoCapture/Info.plist
@@ -34,7 +34,7 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>使用相册</string>
 	<key>UILaunchStoryboardName</key>
-	<string>wwww</string>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
